--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity android:name=".RelativeLayoutActivity" />
         <activity android:name=".ConstraintLayoutActivity" />
         <activity android:name=".ListViewActivity" />
-        <activity android:name=".utils.RecyclerViewActivity"></activity>
+        <activity android:name=".RecyclerViewActivity"></activity>
     </application>
 
 </manifest>
